# ft_linear_regression

./: Cargo.toml  Makefile
matrix/: Cargo.toml
src/: linear_regression.rs  main.rs  main1.rs  main2.rs  predicter.rs
