[package]
name = "ft_linear_regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
plotly = "0.8.4"
matrix = { path = "matrix"}

[[bin]]
name = "trainer"
path ="src/main1.rs"

[[bin]]
name = "predicter"
path ="src/main2.rs"
